syntax = "proto3";
option java_multiple_files = true;
package com.example.order;

message ProtoOrder {
  string id = 1;
  string customerId = 2;
}

message ProtoOrderedThing {
  string thingId = 1;
  string orderId = 2;
}

message ProtoThing {
  string name = 1;
  string size = 2;
  string condition = 3;
  double price = 4;
  int32 quantity = 5;
}

message ProtoCustomer {
  string customerId = 1;
  string firstName = 2;
  string lastName = 3;
}


message GetRequestOrder{

}

message GetResponseOrder {
  repeated ProtoOrder order = 1;
}


message GetRequestOrderedThing{

}

message GetResponseOrderedThing {
  repeated ProtoOrderedThing orderedThings = 1;
}


message CreateRequest{
  ProtoCustomer customer = 1;
  repeated ProtoThing things = 2;
}

message CreateResponse {
}


service orderService {
  rpc getOrder(GetRequestOrder) returns (GetResponseOrder);
  rpc getOrderedThing(GetRequestOrderedThing) returns (GetResponseOrderedThing);
  rpc create(CreateRequest) returns (CreateResponse);
}